Ensure that sound names don't overflow and text is not abbreviated while editing

--- a/src/editor/components/sound-inspector-cell.scss
+++ b/src/editor/components/sound-inspector-cell.scss
@@ -18,6 +18,14 @@ wf-sound-inspector-cell {
 		text-align: right;
 	}
 
+	.file {
+		max-width: calc(100% - 20px - 20px - 10px - 10px);
+		max-height: 25px;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+	}
+
 	&:hover .play i {
 		visibility: visible;
 	}
